
=======================================================
            WanT code:  Log of Changes 
=======================================================

02 Nov 2006      test12 modified: Si bulk in orthorombic instead of hexagonal cell;
                 calculation of 48 WFs. (BB)
                 configure syncronized to Quantum-ESPRESSO CVS: changes to include/
                 libs/ conf/ . (AF)

21 Oct 2006      References in test01 updated. bug fixed in the polarization routine. (AF)

20 Oct 2006      Bug fixed in get_monkpack.f90 : NaN was given when treating shifted
                 grids. Buf fixed also in the output fmt of summary.f90 . (AF & BB)

19 Oct 2006      Bug fixed in summary.f90: ions positions were badly written in crystal 
                 coords (when required with verbosity = 'high'). (AF)

17 Oct 2006      Script and references in test01 re-updated. (AF)

14 Oct 2006      Test references updated (except test05). (AF)

12 Oct 2006      log stuff added in wannier/ src; qexml is working with the new changes 
                 of the 1.2.0 version; more sophisticated check on fmt is done in
                 io_init; summary fmt updated; bug fixed in libtest.sh; (AF)

09 Oct 2006      ctools dir added; memstat.c routine taken from Q-Espresso; 
                 log_module.f90 added to libs. (AF)

03 Oct 2006      I/O of symmetry data implemented. Bug fixed and performance issues
                 tackled in qexpt.f90. qexml.f90 further implemented, according to
                 v1.2.0 . (AF) 

29 Sep 2006      Bug fixed in qexpt and qexml libs when reading wfc with ibnds /= 1 .
                 Reported by Matias Nunez. (AF)

25 Sep 2006      work_dir manage fixed in bands.x and dos.x . (AF)

22 Sep 2006      Script lib for running test added to HOME/script dir; test06 partly
                 updated. (AF) 

17 Sep 2006      Bug fixed in the energy window summary (win_min wasn't dispalyed 
                 correctly). (AF)
